--- a/a-spring-tx/build.gradle
+++ b/a-spring-tx/build.gradle
@@ -11,7 +11,12 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile(project(":spring-instrument"))
     compile(project(":spring-context"))
     compile(project(":spring-aop"))
+    compile(project(":spring-tx"))
+    compile(project(":spring-jdbc"))
+    compile('com.alibaba:druid:1.0.27')
     compile('org.aspectj:aspectjweaver:1.8.13')
+    runtime('mysql:mysql-connector-java:5.1.46')
 }
